<?xml version="1.0" encoding="utf-8"?><!--
  ~ Unless explicitly stated otherwise all files in this repository are licensed under the Apache License Version 2.0.
  ~ This product includes software developed at Datadog (https://www.datadoghq.com/).
  ~ Copyright 2016-Present Datadog, Inc.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding">

    <!-- Regular static text (TextView) -->
    <TextView
        android:id="@+id/static_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view"
        android:textColor="@color/datadog_violet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Regular input field (EditText with no sensitive type) -->
    <EditText
        android:id="@+id/regular_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:backgroundTint="@color/datadog_violet"
        android:hint="@string/edit_text_view"
        android:text="Regular text input"
        android:textColorHint="@color/datadog_violet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/static_text_view" />

    <!-- Sensitive input: Password -->
    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:backgroundTint="@android:color/holo_red_dark"
        android:inputType="textPassword"
        android:text="@string/a_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regular_edit_text" />

    <!-- Sensitive input: Email -->
    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:backgroundTint="@android:color/holo_orange_light"
        android:inputType="textEmailAddress"
        android:text="@string/an_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

    <!-- Sensitive input: Phone -->
    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:backgroundTint="@android:color/holo_blue_light"
        android:inputType="phone"
        android:text="555-1234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>

